--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 @import 'antd/dist/antd.css';
 
-/*
+
 #components-layout-demo-custom-trigger .trigger {
   padding: 0 24px;
   font-size: 18px;
@@ -24,9 +24,9 @@
   background: #fff;
   
 }
-*/
+
 .trigger {
-  padding: 0 24px;
+  padding: 20px ;
   font-size: 18px;
   line-height: 64px;
   cursor: pointer;
